--- a/www/basic-p2p/css/screen.css
+++ b/www/basic-p2p/css/screen.css
@@ -69,6 +69,9 @@ video {
 	max-width: 320px;
 	margin-bottom: 11px;
 }
+.connected #self {
+	cursor: pointer;
+}
 
 /* Media Queries */
 @media screen and (min-width: 500px) {
@@ -84,4 +87,18 @@ video {
 	#header > h1 {
 		margin-bottom: 0;
 	}
+}
+
+/*Video Effects */
+.filter-grayscale {
+	filter: grayscale(100%);
+}
+.filter-sepia {
+	filter: sepia(100%);
+}
+.filter-noir {
+	filter: grayscale(100%) contrast(300%) brightness(60%);
+}
+.filter-psychedelic {
+	filter: hue-rotate(180deg) saturate(400%) contrast(200%);
 }
